--- a/setup.cfg
+++ b/setup.cfg
@@ -29,6 +29,7 @@ exclude_lines =
     \.\.\.
 
 [mypy]
+check_untyped_defs = True
 ignore_missing_imports = True
 files = mitmproxy,examples/addons,release
 
