ci: don't run for dependabot branches

--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -1,5 +1,11 @@
 name: autofix.ci
-on: [ push, pull_request ]
+
+on:
+  pull_request:
+  push:
+    branches:
+      - main
+
 permissions:
   contents: read
 
