--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,12 @@
 name: CI
 
-on: [ push, pull_request, workflow_dispatch ]
+on:
+  push:
+    branches:
+      - '**'
+      - '!dependabot/**'
+  pull_request:
+  workflow_dispatch:
 
 permissions:
   contents: read
