--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,3 +4,8 @@ updates:
     directory: "/"
     schedule:
       interval: "monthly"
+  - package-ecosystem: pip
+    directory: "/"
+    schedule:
+      interval: "monthly"
+    open-pull-requests-limit: 10
