Latest generated schema

--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ envlist = py, flake8, mypy
 skipsdist = True
 toxworkdir={env:TOX_WORK_DIR:.tox}
 allowlist_externals=*
+basepython = python311
 
 [testenv]
 deps =
