Tox and flake cleanup

--- a/tox.ini
+++ b/tox.ini
@@ -2,8 +2,7 @@
 envlist = py, flake8, mypy
 skipsdist = True
 toxworkdir={env:TOX_WORK_DIR:.tox}
-allowlist_externals=*
-basepython = python311
+exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,build,mitmproxy/.tox
 
 [testenv]
 deps =
