cleanups and mypy 1.1.1 fixes

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,7 +32,7 @@ exclude_lines =
 [mypy]
 check_untyped_defs = True
 ignore_missing_imports = True
-files = mitmproxy,examples/addons,release
+files = mitmproxy,examples/addons,release/*.py
 
 [mypy-mitmproxy.contrib.*]
 ignore_errors = True
