--- a/web/package.json
+++ b/web/package.json
@@ -44,6 +44,7 @@
         "gulp-sourcemaps": "^3.0.0",
         "jest": "^27.0.6",
         "jest-fetch-mock": "^3.0.3",
+        "prettier": "2.8.4",
         "react-test-renderer": "^17.0.2",
         "redux-mock-store": "^1.5.4",
         "through2": "^4.0.2",
