--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -36,14 +36,14 @@ jobs:
            export GLOBIGNORE='mitmproxy/contrib/**'
            yesqa **/*.py || true
 
-      - name: Run prettier
-        run: npx prettier --ignore-path web/.prettierignore --check web/
-
       - uses: install-pinned/autoflake@dfa39c5f136f5b885c175734a719dc6ad1f11fc7
       - run: autoflake --in-place --remove-all-unused-imports --exclude mitmproxy/contrib -r .
 
       - uses: install-pinned/black@eb57934f28e8d533bbcb4caa88d00b613b6ddd00
       - run: black --extend-exclude mitmproxy/contrib .
+
+      - run: npx prettier --write .
+        working-directory: web
 
       - uses: mhils/add-pr-ref-in-changelog@main
 
