--- a/web/.prettierignore
+++ b/web/.prettierignore
@@ -1,3 +1,7 @@
 node_modules
 coverage
 *.md
+.tox
+src/js/filt/*.js
+web/src/js/__tests__/ducks/_tflow.ts
+web/src/js/__tests__/ducks/_tbackendstate.ts
