--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -42,7 +42,8 @@ jobs:
       - uses: install-pinned/black@eb57934f28e8d533bbcb4caa88d00b613b6ddd00
       - run: black --extend-exclude mitmproxy/contrib .
 
-      - run: |
+      - name: Run prettier
+        run: |
           npm ci
           npx prettier --write .
         working-directory: web
