--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          token: ${{ secrets.GH_PUSH_TOKEN }}  # this token works to push to the protected main branch.
+          persist-credentials: false
+          fetch-depth: 0
       - uses: actions/setup-node@v3
         with:
           node-version-file: .github/node-version.txt
