--- a/setup.cfg
+++ b/setup.cfg
@@ -53,6 +53,7 @@ exclude =
 [tool:individual_coverage]
 exclude =
     mitmproxy/addons/onboarding.py
+    mitmproxy/addons/blocklist.py
     mitmproxy/connections.py
     mitmproxy/contentviews/base.py
     mitmproxy/contentviews/grpc.py
